style: yet another fix

--- a/.prettierrc.yml
+++ b/.prettierrc.yml
@@ -1,7 +1,7 @@
-trailingComma: 'es5'
+trailingComma: "es5"
 tabWidth: 2
-singleQuote: true
+singleQuote: false
 overrides:
-  - files: '*.xml'
+  - files: "*.xml"
     options:
       printWidth: 100
