feat: rm tools/format.sh

--- a/.github/workflows/auto-format.yml
+++ b/.github/workflows/auto-format.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Format
         shell: bash
         run: |
-          ./tools/format.sh
+          make format
           # make sure only commit modified files
           git clean -dfx
 
