docs: add xml to markdown template

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ classhybridse_1_1vm_1_1_aysnc_row_handler-members.html
 tools/documentation/api_doxygen/html
 tools/documentation/api_doxygen/markdown
 tools/documentation/api_doxygen/xml
+tools/documentation/api_doxygen/c++
