fix: revert pom and setting

--- a/src/sdk/java/pom.xml
+++ b/src/sdk/java/pom.xml
@@ -61,13 +61,25 @@
             </plugins>
         </pluginManagement>
     </build>
+<pluginRepositories>
+    <pluginRepository>
+      <id>4pd-nexus-public</id>
+      <name>4Paradigm nexus maven public</name>
+      <url>https://nexus.4pd.io/repository/maven-public/</url>
+    </pluginRepository>
+  </pluginRepositories>
+
   <distributionManagement>
     <repository>
-	    <id>github</id>
-     	<name>innerpeace1203</name>
-     	<url>https://maven.pkg.github.com/innerpeace1203/myfedb</url>
-   	</repository>
+      <id>4pd-nexus-releases</id>
+      <uniqueVersion>true</uniqueVersion>
+      <url>https://nexus.4pd.io/repository/maven-releases/</url>
+    </repository>
+    <snapshotRepository>
+      <id>4pd-nexus-snapshots</id>
+      <uniqueVersion>true</uniqueVersion>
+      <url>https://nexus.4pd.io/repository/maven-snapshots/</url>
+    </snapshotRepository>
   </distributionManagement>
 
  </project>
-
