--- a/java/hybridse-sdk/pom.xml
+++ b/java/hybridse-sdk/pom.xml
@@ -10,9 +10,9 @@
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>hybridse-common</artifactId>
+	<artifactId>hybridse-sdk</artifactId>
 	<packaging>jar</packaging>
-	<name>hybridse-common</name>
+	<name>hybridse-sdk</name>
 	<version>${versionFromProfile}</version>
 
 	<profiles>
