--- a/java/pom.xml
+++ b/java/pom.xml
@@ -9,7 +9,7 @@
     <artifactId>hybridse-java</artifactId>
     <version>0.1.0-SNAPSHOT</version>
     <modules>
-        <module>hybridse-common</module>
+        <module>hybridse-sdk</module>
         <module>hybridse-native</module>
         <module>hybridse-proto</module>
     </modules>
