fix: rename version name

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -30,7 +30,7 @@ jobs:
           VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
           [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
           [ "$VERSION" == "main" ] && VERSION=latest
-          [ "$VERSION" == "feat/package" ] && VERSION=beta
+          [ "$VERSION" == "package" ] && VERSION=beta
           FILE_NAME=fedb-cluster-$VERSION.tar.gz
           echo VERSION=$VERSION
           echo FILE_NAME=$FILE_NAME
