feat: add spotless maven plugin that rocks google-java-format

--- a/java/pom.xml
+++ b/java/pom.xml
@@ -18,6 +18,8 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <plugin.violationSeverity>error</plugin.violationSeverity>
+        <spotless-maven-plugin.version>2.9.0</spotless-maven-plugin.version>
+        <google-java-format.version>1.7</google-java-format.version>
     </properties>
     <build>
         <pluginManagement>
@@ -93,6 +95,31 @@
                             <version>8.41</version>
                         </dependency>
                     </dependencies>
+                </plugin>
+                <plugin>
+                    <groupId>com.diffplug.spotless</groupId>
+                    <artifactId>spotless-maven-plugin</artifactId>
+                    <version>${spotless-maven-plugin.version}</version>
+                    <!-- spotless:check is bound to verfiy phase by default -->
+                    <configuration>
+                        <java>
+                            <googleJavaFormat>
+                                <version>${google-java-format.version}</version>
+                                <style>AOSP</style>
+                            </googleJavaFormat>
+                            <removeUnusedImports/>
+                            <indent> <!-- specify whether to use tabs or spaces for indentation -->
+                                <spaces>true</spaces> <!-- or <tabs>true</tabs> -->
+                                <spacesPerTab>4</spacesPerTab> <!-- optional, default is 4 -->
+                            </indent>
+                            <!-- <licenseHeader> <!&#45;&#45; specify either content or file, but not both &#45;&#45;> -->
+                            <!--     <content>/* Copyright $YEAR 4Paradigm */</content>  <!&#45;&#45; or <file>${basedir}/license&#45;header</file> &#45;&#45;> -->
+                            <!--     <delimiter> -->
+                            <!--         Licensed -->
+                            <!--     </delimiter>  <!&#45;&#45; content until first occurrence of the delimiter regex will be interpreted as header section &#45;&#45;> -->
+                            <!-- </licenseHeader> -->
+                        </java>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
