--- a/java/hybridse-common/pom.xml
+++ b/java/hybridse-common/pom.xml
@@ -116,6 +116,10 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>com.diffplug.spotless</groupId>
+                <artifactId>spotless-maven-plugin</artifactId>
+            </plugin>
         </plugins>
 	</build>
 </project>
