--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ java/hybridse-spark/src/test/resources/fesql_windows
 tools/documentation/api_doxygen/html
 tools/documentation/api_doxygen/xml
 tools/documentation/api_doxygen/c++
+SUMMARY.md
