docs(engine): common to document engine API

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ tools/documentation/api_doxygen/html
 tools/documentation/api_doxygen/xml
 tools/documentation/api_doxygen/c++
 SUMMARY.md
+doxybook2.sh
