refactor: rename fesql

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -47,4 +47,4 @@ jobs:
         run: |
           source /etc/profile.d/enable-rh.sh
           git clean -dfx
-          test -d fesql && cd fesql && git clean -dfx
+          test -d hybridse && cd hybridse && git clean -dfx
