--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "hybridse"]
 	path = hybridse
-	url = https://github.com/4paradigm/HybridSE.git
+	url = https://wuyou10206:1cf68583e36cf11ebcd22a10333247e0298347e4@github.com/4paradigm/HybridSE.git
