feat: comment opt and version update
1. fix some comment for EngineOptions
2. Update HybridSE-java version to 0.1.1
3. CMakeList format

--- a/java/pom.xml
+++ b/java/pom.xml
@@ -7,7 +7,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com._4paradigm.hybridse</groupId>
     <artifactId>hybridse-java</artifactId>
-    <version>0.1.1-SNAPSHOT</version>
+    <version>0.1.1</version>
     <modules>
         <module>hybridse-sdk</module>
         <module>hybridse-native</module>
