--- a/java/hybridse-sdk/pom.xml
+++ b/java/hybridse-sdk/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<artifactId>hybridse-java</artifactId>
 		<groupId>com._4paradigm.hybridse</groupId>
-                <version>0.1.1-SNAPSHOT</version>
+                <version>0.1.1</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
