--- a/.github/workflows/hybridse-ci.yml
+++ b/.github/workflows/hybridse-ci.yml
@@ -20,7 +20,7 @@ jobs:
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
     runs-on: self-hosted
     container:
-      image: ghcr.io/4paradigm/centos6_gcc7_hybridsql:stable
+      image: ghcr.io/4paradigm/centos6_gcc7_hybridsql:0.1.1
 
     steps:
     - uses: actions/checkout@v1
@@ -57,6 +57,24 @@ jobs:
         files: java/hybridse-sdk/target/**/TEST-*.xml
         check_name: Java Test Report
         comment_title: Java Test Report
+
+    - name: Create Archive
+      run: |
+        VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
+        [[ "${{ github.ref }}" == "refs/tags/v"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
+        echo ::set-env name=HYBRIDSE_VERSION::"$VERSION"
+        HYBRIDSE_VERSION=$VERSION ./tools/hybridse_deploy.sh
+
+    - name: Upload Artifacts
+      if: ${{ startsWith(github.ref, 'refs/tags/v') }}
+      uses: meeDamian/github-release@2.0
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        draft: true
+        prerelease: true
+        gzip: folders
+        files: >
+          hybridse-${{ env.HYBRIDSE_VERSION }}.tar.gz
 
     - name: Cleanup
       if: always()
