--- a/src/sdk/java/pom.xml
+++ b/src/sdk/java/pom.xml
@@ -5,11 +5,10 @@
 
     <groupId>com._4paradigm.sql</groupId>
     <artifactId>sql-sdk</artifactId>
-    <version>2.1.0.0-SNAPSHOT</version>
+    <version>2.2.0</version>
     <modules>
            <module>sql-jdbc</module>
            <module>sql-native</module>
-           <module>fesql-auto-test-java</module>
     </modules>
     <packaging>pom</packaging>
     <name>sdk</name>
@@ -61,25 +60,18 @@
             </plugins>
         </pluginManagement>
     </build>
-<pluginRepositories>
-    <pluginRepository>
-      <id>4pd-nexus-public</id>
-      <name>4Paradigm nexus maven public</name>
-      <url>https://nexus.4pd.io/repository/maven-public/</url>
-    </pluginRepository>
+  <pluginRepositories>
   </pluginRepositories>
 
   <distributionManagement>
-    <repository>
-      <id>4pd-nexus-releases</id>
-      <uniqueVersion>true</uniqueVersion>
-      <url>https://nexus.4pd.io/repository/maven-releases/</url>
-    </repository>
     <snapshotRepository>
-      <id>4pd-nexus-snapshots</id>
-      <uniqueVersion>true</uniqueVersion>
-      <url>https://nexus.4pd.io/repository/maven-snapshots/</url>
+        <id>file-repository</id>
+        <url>file:///tmp/hybridse_java_packages/</url>
     </snapshotRepository>
+    <repository>
+        <id>file-repository</id>
+        <url>file:///tmp/hybridse_java_packages/</url>
+    </repository>
   </distributionManagement>
 
  </project>
