--- a/src/sdk/java/sql-jdbc/pom.xml
+++ b/src/sdk/java/sql-jdbc/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
 		<artifactId>sql-sdk</artifactId>
 		<groupId>com._4paradigm.sql</groupId>
-        <version>2.1.0.0-SNAPSHOT</version>
+        <version>2.2.0</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>sql-jdbc</artifactId>
 	<packaging>jar</packaging>
 	<name>sql-jdbc</name>
-	<version>2.1.0.0-SNAPSHOT</version>
+	<version>2.2.0</version>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -38,7 +38,7 @@
 		<dependency>
 			<groupId>com._4paradigm.sql</groupId>
 			<artifactId>sql-native</artifactId>
-			<version>2.1.0.0-SNAPSHOT</version>
+			<version>2.2.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
