--- a/src/sdk/java/sql-native/pom.xml
+++ b/src/sdk/java/sql-native/pom.xml
@@ -43,7 +43,7 @@
             <resource>
                 <directory>src/main/resources</directory>
                 <includes>
-                    <include>*/*</include>
+                    <include>**/*</include>
                 </includes>
             </resource>
             <resource>
