--- a/.github/workflows/hybridse-ci.yml
+++ b/.github/workflows/hybridse-ci.yml
@@ -124,13 +124,13 @@ jobs:
 
       - name: Build and Coverage
         run: |
-          ./tools/compile_and_coverage.sh
+          # ./tools/compile_and_coverage.sh
 
-      - name: coverage report
-        uses: romeovs/lcov-reporter-action@master
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          lcov-file: ./build/coverage.info
+      # - name: coverage report
+      #   uses: romeovs/lcov-reporter-action@master
+      #   with:
+      #     github-token: ${{ secrets.GITHUB_TOKEN }}
+      #     lcov-file: ./build/coverage.info
 
       # - name: benchmark
       #   run: |
