--- a/.github/workflows/hybridse-ci.yml
+++ b/.github/workflows/hybridse-ci.yml
@@ -101,6 +101,7 @@ jobs:
         if: ${{ startsWith(github.ref, 'refs/tags/v') }}
         uses: softprops/action-gh-release@v1
         with:
+          # TODO: add CHANGELOG.md and remove draft option
           draft: true
           files: |
             hybridse-${{ env.HYBRIDSE_VERSION }}-*.tar.gz
