--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -14,16 +14,9 @@ jobs:
         password: ${{ secrets.CR_PAT_ZW }}
     steps:
       - uses: actions/checkout@v1
-      - name: update submodule
-        run: |
-           /opt/rh/sclo-git212/root/usr/bin/git submodule update --init
-      - name: uncompress_thirdparty
-        run: |
-          cd /depends && tar -zxf thirdparty.tar.gz
       - name: build
         run: |
-          ln -sf /depends/thirdparty thirdparty
-          ln -sf /depends/thirdsrc thirdsrc
+          bash steps/init_env.sh
           bash steps/install_hybridse.sh
           mkdir -p build
           source /root/.bashrc && cd build && cmake -DSQL_PYSDK_ENABLE=OFF -DSQL_JAVASDK_ENABLE=OFF -DTESTING_ENABLE=ON .. && make -j$(nproc) && cd ../
