--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -4,7 +4,7 @@ env:
   GIT_SUBMODULE_STRATEGY: recursive
 
 jobs:
-
+  runs_on: ubuntu-latest
   cpp_ut:
     container:
       image: ghcr.io/4paradigm/centos6_gcc7_hybridsql:0.1.1
