fix: update runs-on

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -5,7 +5,7 @@ env:
 
 jobs:
   cpp_ut:
-    runs_on: ubuntu-latest
+    runs-on: ubuntu-latest
     container:
       image: ghcr.io/4paradigm/centos6_gcc7_hybridsql:0.1.1
       credentials:
