--- a/java/hybridse-sdk/pom.xml
+++ b/java/hybridse-sdk/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<artifactId>hybridse-java</artifactId>
 		<groupId>com._4paradigm.hybridse</groupId>
-                <version>0.1.1</version>
+                <version>0.1.2</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
@@ -87,6 +87,12 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.2.4</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com._4paradigm.hybridse</groupId>
+            <artifactId>hybridse-proto</artifactId>
+            <version>0.1.2</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
