style: fix hybridse sdk style

--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -59,3 +59,4 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           reporter: github-pr-review
           tool_name: checkstyle
+          checkstyle_config: java/style_checks.xml
