--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -55,10 +55,5 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Run check style
-        uses: nikitasavinov/checkstyle-action@0.3.1
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          reporter: 'github-pr-review'
-          tool_name: 'checkstyle'
-          level: 'warning'
-          checkstyle_config: 'java/style_checks.xml'
+        run: |
+          make javalint
