--- a/java/hybridse-proto/pom.xml
+++ b/java/hybridse-proto/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
 		<artifactId>hybridse-java</artifactId>
-		<groupId>com._4paradigm.hybridse</groupId>
+		<groupId>com.4paradigm.hybridsql</groupId>
         <version>0.1.2</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
