--- a/java/hybridse-sdk/pom.xml
+++ b/java/hybridse-sdk/pom.xml
@@ -5,7 +5,7 @@
 >
 	<parent>
 		<artifactId>hybridse-java</artifactId>
-		<groupId>com._4paradigm.hybridse</groupId>
+		<groupId>com.4paradigm.hybridsql</groupId>
                 <version>0.1.2</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
@@ -78,7 +78,7 @@
         </dependency>
 
 		<dependency>
-			<groupId>com._4paradigm.hybridse</groupId>
+			<groupId>com.4paradigm.hybridsql</groupId>
 			<artifactId>hybridse-native</artifactId>
 			<version>${versionFromProfile}</version>
 		</dependency>
@@ -90,7 +90,7 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>com._4paradigm.hybridse</groupId>
+            <groupId>com.4paradigm.hybridsql</groupId>
             <artifactId>hybridse-proto</artifactId>
             <version>0.1.2</version>
             <scope>compile</scope>
